крч переработал категории чтобы взаимодействовать с ними было легче. Так же добавил сохранение продукта в индекс elasticsearch и добавлен поиск по названию. сам конфиг анализатора находиться в папке elasticsearch под названием indexAnalizerConfig.json